--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@ float: left;
                                                                           <li>
                                                                                   <li>
                                                                                           <div class="nav-article">
-                                                                                                  <p>2019厦门马拉松正式开赛</p>
+                                                                                                  <p>2019厦门马拉松吗正式开赛</p>
                                                                                                 
                                                                                                   <div class="nav-list-pic"></div>
                                                                                                    <div class="nav-list-txt"> <p>曾经沧海难为水，除却巫山不是云</p><span>新华网</span>   </div>
